--- a/templates/index_review.html
+++ b/templates/index_review.html
@@ -9,7 +9,9 @@
     <h1>Movie Review</h1>
     <form>
         <textarea  id="message"></textarea><br>
+        <button type="reset">reset</button>
         <button type="submit" id="button">Predict</button>
+        
     </form>
 
     <h3 id="result"></h3>
