--- a/static/home.css
+++ b/static/home.css
@@ -1,45 +1,57 @@
-*{
-    margin:0;
-    padding :0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-body{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 100vh;
-    background-image: url("/static/home_back.jpg");
-    background-size: cover;       
-    background-position: center;  
-    background-repeat:repeat; 
-    }
 
-.container{
-    align-self: center;
-    width:80%; 
+body {
+    min-height: 100vh;
+    background-image: url("/static/home_back.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    
 }
-.dog{
-    margin-top: 40px;
-    display:flex;
+
+.container {
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.dog {
+    margin-top: 20px;
+    margin-bottom: 100px;
+    display: flex;
+    flex-wrap: wrap; 
     align-items: center;
-    justify-content: space-around;
-    padding:10px 30px;
-    background-color:rgb(192, 179, 204);
-    border:4px solid black;
-    border-radius: 200px;
+    justify-content: space-between;
+    padding: 15px 30px;
+    background-color: rgb(192, 179, 204);
+    border: 4px solid black;
+    border-radius: 50px;
 }
-#img2{
+h1{
+    text-align: center;
+    color: rgb(217, 255, 0);
+}
+#img2 {
     height:100px;
     border-radius:80px ;
 }
-#B{
+
+#B {
     font-size:60px ;
-    font-weight: bold;
-    text-shadow:1px 1px 4px  blue;
+    text-shadow: 1px 1px 4px blue;
+    text-align: center;
 }
+
 #C{
     font-size: 25px;
+    display: flex;
+    gap: 15px;
 }
+
 .card_container{
     width:95%;
     height:95%;
@@ -47,48 +59,76 @@ body{
     flex-direction: column;
 
 }
+
 .card{
     border:3px solid black;
     width:105%;
     background-color:rgb(227, 223, 245);
     border-radius: 40px;
-    margin-top:100px ;
+    margin-bottom:100px ;
     margin-left:10px;
     padding-top: 30px;
     padding-bottom: 40px;
     display:flex;
 }
-.predict{
-    margin-left:40px;
-    margin-bottom:20px;
-    width:270px;
-    display:flex;
-}
-.dabba{
-    width:80px;
-    height: 65px;
-    margin:3px;
-}
-.dabba:hover{
-    transform: rotate(180deg);
+
+#flip1, #flip2 {
+        flex-direction: row-reverse;
 }
 
-.img:hover {
-    transform: translateY(-10px);
-}
-.button:hover{
-    transform: translateY(-5px);
+@media (max-width: 768px) {
+    .card {
+        flex-direction: column;
+        text-align: left;
+    }
+
+    #flip1, #flip2 {
+        flex-direction: column;
+    }
+    .icon{
+        align-self: center;
+    }
+    
 }
 
-.img{
-    width:300px;
-    height:200px;
-    margin-top:20px;
-    margin-left:40px;
-    border:2px solid black;
+.icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 15px;
+    width: 100vw;
+    margin: 30px;
+}
+
+.img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    border: 2px solid black;
     border-radius: 15px;
+    transition: transform 0.3s;
+}
+
+.predict {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.dabba {
+    width: 60px;
+    height: 60px;
+    transition: transform 0.5s;
+}
+
+.dabba:hover { transform: rotate(180deg); }
+.img:hover { transform: translateY(-10px); }
+.button:hover { 
+    transform: translateY(-5px);
 
 }
+
 .button{
     background-color: #48bb78;
     color: white;
@@ -97,19 +137,8 @@ body{
     font-size: large;
     font-weight: bold;
     cursor: pointer;
-
-    transition: background 0.3s;
 }
 
-.icon{
-    display:flex;
-    flex-direction: column;
-    justify-content:space-between;
-}
-#flip1 , #flip2{
-    flex-direction: row-reverse;
-    padding-right: 30px;
-}
 .para{
     font-size:25px;
     margin-left:6px;
@@ -119,30 +148,27 @@ body{
     line-height:28px;
     padding:5px
 }
-.name{
-    border:3px solid black;
-    margin:50px;
-    border-radius: 30px;
-    background-color: rgb(179, 164, 194);
-    width:400px;
+
+footer {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 30px 10px;
+    width: 100%;
 }
-footer{
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-#create{
-    font-size: 25px;
+
+#create {
+    font-size: 1.5rem;
     text-align: center;
     font-style: italic;
-    text-shadow:1px 1px rgb(118, 114, 123);
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
-.name1{
+
+.name1 {
     display: flex;
-    justify-content: space-around;
-    font-size:20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+    gap: 20px;
+    font-size: 1.1rem;
     font-weight: bold;
     color: red;
-    text-shadow:1px 1px  white;
-    padding-bottom: 20px;
 }
