--- a/templates/home.html
+++ b/templates/home.html
@@ -16,14 +16,13 @@
                 <img id="img2" src="/static/logo.jpeg" alt="">
             </div>
             <div id="B"> 
-            AI Prediction
+            Query & Predictor Hub
             </div>
             <div id="C"> 
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Contact us</a></li>
-                </ul>
+                <a href="">Home</a>
+                <a href="">About us</a>
+                <a href="">Contact us</a>
+
             </div>
         </div>
 
@@ -33,7 +32,7 @@
 
         <div class="card_container">
             <!-- 1st card start -->
-
+            <h1>1. FLIGHT PRICE PREDICTION</h1>
             <div class="card">
                 <div class="icon">
                     <img class="img"  src="/static/flight.jpg" alt="flight image">
@@ -55,7 +54,7 @@
 
 
 
-
+            <h1>2. DIABETES PREDICTION</h1>
             <div class="card">
                 <div class="icon">
                     <img class="img"  src="/static/diabeties.png" alt="">
@@ -74,7 +73,7 @@
                 </div>  
             </div>
 
-
+            <H1>3. GEMINI AI CHAT BOT MODEL </H1>
             <div class="card" id="flip1">
                 <div class="icon">
                     <img class="img"  src="/static/chatbot.png" alt="">
@@ -94,7 +93,7 @@
                 </div>  
             </div>
 
-
+            <H1>4. CHURN PREDICTION MODEL</H1>
             <div class="card">
                 <div class="icon">
                     <img class="img"  src="/static/churn.png" alt="">
@@ -113,7 +112,7 @@
                 </div>  
             </div>
 
-
+            <H1>5. MOVIE REVIEW PREDICTION MODEL</H1>
             <div class="card" id="flip2">
                 <div class="icon">
                     <img class="img"  src="/static/harry potter.png" alt="">
@@ -132,7 +131,7 @@
                 </div>  
 
             </div>
-
+            <H1>6. SPAM EMAIL CLASSIFICATION MODEL</H1>
             <div class="card">
                 <div class="icon">
                     <img class="img"  src="/static/spam.png" alt="">
