--- a/templates/index_diabetes.html
+++ b/templates/index_diabetes.html
@@ -10,12 +10,13 @@
             box-sizing: border-box;
             font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         }
+        
 
         body {
             min-height: 100vh;
             margin: 0;
             display: flex;
-            justify-content: center;
+            justify-content: space-around;
             align-items: center;
             background: linear-gradient(135deg, #4facfe, #00f2fe);
         }
@@ -24,14 +25,23 @@
             background: #ffffff;
             width: 420px;
             padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
+            border-radius:100px;
+            border: 1px solid black;
+            box-shadow: 0 15px 40px rgba(236, 26, 26, 0.2);
+            display:flex;
+            flex-direction: column;
+            margin-left:20px;
+            margin-top:5px;
+            margin-bottom:5px;
+            
+            
         }
 
         h1 {
             text-align: center;
             margin-bottom: 20px;
             color: #333;
+            text-shadow:1px 1px 2px hsl(0, 61%, 48%)
         }
 
         form {
@@ -43,7 +53,7 @@
         input {
             padding: 10px;
             border-radius: 6px;
-            border: 1px solid #ccc;
+            border: 1px solid #160e0e;
             font-size: 14px;
         }
 
@@ -63,6 +73,7 @@
             cursor: pointer;
             background: linear-gradient(135deg, #4facfe, #00f2fe);
             color: white;
+            width:100px;
             transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
 
@@ -84,11 +95,54 @@
             color: #555;
             font-size: 14px;
         }
+        .circle_closed{
+            
+            display:flex;
+            flex-direction: column;
+            align-items:center;
+            justify-content:center;
+            margin-right:200px;
+}
+.circle1{
+    width:200px;
+    height:200px;
+    border-radius: 50%;
+    background: conic-gradient(from 0deg,#e74c3c 0% calc(var(--p)*3.6deg),#2ecc71 calc(var(--p)*3.6deg),#2ecc71 100%);
+    
+    box-shadow:0 8px 20px rgba(0 0 0 0.25);
+    
+    position:relative;
+    
+    margin-left:20px;
+    
+}
+
+.value{
+    position:absolute;
+    font-size :30px;
+    font-weight:700px;
+    color:#2c3e50;
+}
+
+#red{
+    display: flex;
+    align-items: center;
+}
+#green{
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width:768px){
+
+}
+
     </style>
 </head>
 <body>
 
     <div class="container">
+    
         <h1>Diabetes Prediction</h1>
 
         <form id="diabetesForm">
@@ -103,13 +157,31 @@
         </form>
 
         <button id="predictbtn">Predict</button>
-
+         
         <div class="result">
             <h3 id="result"></h3>
             <h3 id="prob"></h3>
         </div>
     </div>
+    <div class="circle_closed">
+            <div>
+                <div id="red">
+                    <div style="color: red;border: 1px solid red; background-color: red; width: 15px; height: 15px;"></div>
+                    <p>Percentage of being Diabetic : </p>
+                </div>
+
+                <div id="green">
+                    <div style="color: green;border: 1px solid green; background-color: green; width: 15px; height: 15px;"></div>
+                    <p>Percetange of being Non-Diabetic : </p>
+                </div>
+                
+            </div>
+            <div class="circle1">
+                
+            </div>
+     </div>
 
     <script src="/static/script_diabetes.js"></script>
+
 </body>
 </html>
